structure navbar et titre

--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="container">
+        <nav id="navbar">
+            <div id="logo"></div>
+            <menu>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Pages</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </menu>
+        </nav>
+        <section id="prices">
+            <header>
+                <h1>Our Prices</h1>
+                <p>We help company set up business strategy including design brand identiy or product design service.</p>
+                <div><a href="#">Free consultation</a></div>
+                <div><a href="#">View projects</a></div>
+            </header>
+        </section>
+    </header>
+
+    <main>
+        
+    </main>
 </body>
 </html>
