--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header class="container">
-        <nav id="navbar">
+        <nav id="navbar" class="flex">
             <div id="logo"></div>
-            <menu>
+            <menu class="flexSideSide">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Pages</a></li>
                 <li><a href="#">Services</a></li>
@@ -21,18 +21,46 @@
                 <li><a href="#">Contact</a></li>
             </menu>
         </nav>
-        <section id="prices">
+        <section id="title">
             <header>
                 <h1>Our Prices</h1>
                 <p>We help company set up business strategy including design brand identiy or product design service.</p>
-                <div><a href="#">Free consultation</a></div>
-                <div><a href="#">View projects</a></div>
+                <div class="flex">
+                    <div><a href="#">Free consultation</a></div>
+                    <div><a href="#">View projects</a></div>
+                </div>
             </header>
         </section>
     </header>
 
     <main>
-        
+        <section id="price">
+
+        </section>
+
+        <section id="testimonial">
+
+        </section>
+
+        <section id="services">
+
+        </section>
+
+        <section id="community">
+
+        </section>
     </main>
+    
+    <footer>
+        <div id="subscribe">
+
+        </div>
+        <div id="footbar">
+
+        </div>
+        <div id="copyright">
+
+        </div>
+    </footer>
 </body>
 </html>
