--- a/index.html
+++ b/index.html
@@ -26,17 +26,65 @@
                 <h1>Our Prices</h1>
                 <p>We help company set up business strategy including design brand identiy or product design service.</p>
                 <div class="flex">
-                    <div><a href="#">Free consultation</a></div>
+                    <div><a class="button" href="#">Free consultation</a></div>
                     <div><a href="#">View projects</a></div>
                 </div>
             </header>
         </section>
     </header>
 
-    <main>
-        <section id="price">
+    <main class="container">
+        <!-- PRICE___________________________________________________________________________ -->
+        <div id="price" class="flexSideSide">
+            <section id="priceBasic">
+                <div class="flexSideSide">
+                    <header><h2>Basic</h2></header>
+                    <div><p>best choise </p></div>
+                </div>
+                <hr>
+                <p>15$</p>
+                <p>Per month</p>
+                <ul>
+                    <li>Free updates</li>
+                    <li>Custom domain</li>
+                    <li>Outstanding support</li>
+                    <li>Unlimited storage</li>
+                    <li>Build responsive website</li>
+                </ul>
+                <div><a class="button" href="#">Getting started</a></div>
 
-        </section>
+            </section>
+
+            <section id="priceStandard">
+                <header><h2>Standard</h2></header>
+                <hr>
+                <p>37$</p>
+                <p>Per month</p>
+                <ul>
+                    <li>Free updates</li>
+                    <li>Custom domain</li>
+                    <li>Outstanding support</li>
+                    <li>Unlimited storage</li>
+                    <li>Build responsive website</li>
+                </ul>
+                <div><a class="button" href="#">Getting started</a></div>
+            </section>
+
+            <section id="priceAdvance">
+                <header><h2>Advance</h2></header>
+                <hr>
+                <p>42$</p>
+                <p>Per month</p>
+                <ul>
+                    <li>Free updates</li>
+                    <li>Custom domain</li>
+                    <li>Outstanding support</li>
+                    <li>Unlimited storage</li>
+                    <li>Build responsive website</li>
+                </ul>
+                <div><a class="button" href="#">Getting started</a></div>
+            </section>
+        </div>
 
         <section id="testimonial">
 
@@ -51,7 +99,7 @@
         </section>
     </main>
     
-    <footer>
+    <footer class="container">
         <div id="subscribe">
 
         </div>
