--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
             </section>
         </div>
 
-        <section id="testimonial">
-
+        <section id="testimonial" class="TXTcenter">
+            <header><h2>Happy clients about us</h2></header>
+            <p>This is the perfect solution for our business. Well-coordinated teamwork and knowledge in the field of our business created the perfect product for the development of the company. We have already seen amazing results.</p>
+            <div id="colorball"></div>
+            <p>Kevin Drives</p>
+            <p>Marketing expert - ReeDip</p>
         </section>
 
         <section id="services">
