ajout search bar

--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 </head>
 <body>
     <header class="container">
-        <nav id="navbar" class="flex">
-            <div id="logo"></div>
-            <menu class="flexSideSide">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </menu>
+        <nav id="navbar" class="flexSideSide">
+            <div id="navleft" class="flexSideSide">
+                <div id="logo"></div>
+                <menu class="flexSideSide">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Pages</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </menu>
+            </div>
+            <form id="searchform" action=""><input type="search" name="search" aria-label="Search here"></form>
         </nav>
         <section id="title">
             <header>
