Update structure Services

--- a/index.html
+++ b/index.html
@@ -97,9 +97,39 @@
             <p>Marketing expert - ReeDip</p>
         </section>
 
-        <section id="services">
+        <div id="services" class="flexSideSide">
+            <div id="serviceLeft" class="flex">
+                <div class="flexCol">
+                    <section>
+                        <header><h2>Corporate finance</h2></header>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed …</p>
+                    </section>
+                    <section>
+                        <header><h2>Market analysis</h2></header>
+                        <p>Nibh vel velit auctor aliqunean sollicitudinlorem bibendum auci …</p>
+                        <p><a href="#">Read more</a></p>
+                    </section>
+                </div>
+                <div class="flexCol">
+                    <section>
+                        <header><h2>Audit & Evaluation</h2></header>
+                        <p>Cras risus arcu, sodales ac, ultrices ac, mollis quis, justo. Sed a libero. …</p>
+                    </section>
+                    <section>
+                        <header><h2>Sales & Trade</h2></header>
+                        <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi …</p>
+                    </section>
+                </div>
+            </div>
 
-        </section>
+            <div id="serviceRight">
+                <section>
+                    <header><h2>Get a solutions to your businesses</h2></header>
+                    <p>Our consultants help address your most challenging issues by providing strategic, financial, operational, and IT services.</p>
+                    <div><a class="button" href="#">Order Service</a></div>
+                </section>
+            </div>
+        </div>
 
         <section id="community">
 
