Update structure Community

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <div id="services" class="flexSideSide">
             <div id="serviceLeft" class="flex">
-                <div class="flexCol">
+                <div>
                     <section>
                         <header><h2>Corporate finance</h2></header>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed …</p>
@@ -110,7 +110,7 @@
                         <p><a href="#">Read more</a></p>
                     </section>
                 </div>
-                <div class="flexCol">
+                <div>
                     <section>
                         <header><h2>Audit & Evaluation</h2></header>
                         <p>Cras risus arcu, sodales ac, ultrices ac, mollis quis, justo. Sed a libero. …</p>
@@ -131,8 +131,14 @@
             </div>
         </div>
 
-        <section id="community">
-
+        <section id="community" class="flexSideSide">
+            <div id="grayblock"></div>
+            <header><h2>We serve fine services in creative community</h2></header>
+            <p>Commodo nulla facilisi nullam vehicula ipsum sociis. Faucibus scelerisque eleifend donec pretium necud vulputate sapien nec, elit eget gravida cum. </p>
+            <div class="flex">
+                <div><a class="button" href="#">Be One of Us</a></div>
+                <div><a href="#">Support projects</a></div>
+            </div>
         </section>
     </main>
     
