Update structure Footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="container">
         <nav id="navbar" class="flexSideSide">
             <div id="navleft" class="flexSideSide">
-                <div id="logo"></div>
+                <div class="logo"></div>
                 <menu class="flexSideSide">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Pages</a></li>
@@ -143,14 +143,41 @@
     </main>
     
     <footer class="container">
-        <div id="subscribe">
-
+        <div id="subscribe" class="flexSideSide">
+            <p>Subscribe to our newsletters</p>
+            <div><a href="#">Send</a></div>
         </div>
-        <div id="footbar">
-
+        <div id="footbar" class="flexSideSide">
+            <div id="footleft">
+                <div class="logo"></div>
+                <p>The wise man therefore always holds in these on matters to this principle of selection he rejects the to secure other friend.</p>
+                <hr>
+            </div>
+            <div id="footContact">
+                <p>Contact Info</p>
+                <ul>
+                    <li>2 St Gabriel Walk London SE1 6FG, UK</li>
+                    <li>+44 141 552 3000</li>
+                    <li><a href="mailto:info@merkulov.design">info@merkulov.design</a></li>
+                </ul>
+            </div>
+            <div id="links">
+                <p>Links</p>
+                <div class="flex">
+                    <ul>
+                        <li>About company</li>
+                        <li>Our services</li>
+                        <li>Portfolio</li>
+                    </ul>
+                    <ul>
+                        <li>Team</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div id="copyright">
-
+            <p>© 2019 <span>Elipso Sketch Template</span> by <a href="#">merkulove</a></p>
         </div>
     </footer>
 </body>
