application classes fonts

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <!-- Title  -->
         <section id="title">
             <header>
-                <h1>Our Prices</h1>
-                <p>We help company set up business strategy including design brand identiy or product design service.</p>
+                <h1 class="fontSec fSize50 fBold TXTmainDark">Our Prices</h1>
+                <p class="fSize22">We help company set up business strategy including design brand identiy or product design service.</p>
                 <div class="flex">
                     <div><a class="button" href="#">Free consultation</a></div>
-                    <div><a href="#">View projects</a></div>
+                    <div><a class="TXTmainDark" href="#">View projects</a></div>
                 </div>
             </header>
         </section>
@@ -43,14 +43,14 @@
         <div id="price" class="flexSideSide" class="BCKwhite shadow">
             <!-- Basic  -->
             <section id="priceBasic">
-                <div class="flexSideSide">
-                    <header><h2>Basic</h2></header>
-                    <div><p>best choise </p></div>
+                < class="flexSideSide">
+                    <header><h2 class="TXTmainDark fSize20 fBold fontSec">Basic</h2></header>
+                    <p class="BCKgray TXThighlight">best choise </p>
                 </div>
                 <hr>
-                <p>15$</p>
+                <p class="TXTmainDark fSize50 fBold fontSec">15$</p>
                 <p>Per month</p>
-                <ul>
+                <ul class="fSize18">
                     <li>Free updates</li>
                     <li>Custom domain</li>
                     <li>Outstanding support</li>
@@ -61,11 +61,11 @@
             </section>
             <!-- Standard  -->
             <section id="priceStandard" class="BCKwhite shadow">
-                <header><h2>Standard</h2></header>
+                <header><h2 class="TXTmainDark fSize20 fBold fontSec">Standard</h2></header>
                 <hr>
-                <p>37$</p>
+                <p class="TXTmainDark fSize50 fBold fontSec">37$</p>
                 <p>Per month</p>
-                <ul>
+                <ul class="fSize18">
                     <li>Free updates</li>
                     <li>Custom domain</li>
                     <li>Outstanding support</li>
@@ -76,11 +76,11 @@
             </section>
             <!-- Advance  -->
             <section id="priceAdvance" class="BCKwhite shadow">
-                <header><h2>Advance</h2></header>
+                <header><h2 class="TXTmainDark fSize20 fBold fontSec">Advance</h2></header>
                 <hr>
-                <p>42$</p>
+                <p class="TXTmainDark fSize50 fBold fontSec">42$</p>
                 <p>Per month</p>
-                <ul>
+                <ul class="fSize18">
                     <li>Free updates</li>
                     <li>Custom domain</li>
                     <li>Outstanding support</li>
@@ -92,10 +92,10 @@
         </div>
         <!-- TESTIMONIAL___________________________________________________________________________ -->
         <section id="testimonial" class="TXTcenter BCKgray">
-            <header><h2>Happy clients about us</h2></header>
-            <p>This is the perfect solution for our business. Well-coordinated teamwork and knowledge in the field of our business created the perfect product for the development of the company. We have already seen amazing results.</p>
+            <header><h2 class="TXTmainDark fSize34 fBold fontSec">Happy clients about us</h2></header>
+            <p class="fSize18">This is the perfect solution for our business. Well-coordinated teamwork and knowledge in the field of our business created the perfect product for the development of the company. We have already seen amazing results.</p>
             <div id="colorball" class="BCKmain"></div>
-            <p>Kevin Drives</p>
+            <p class="TXTmainDark fSize20 fBold fontSec">Kevin Drives</p>
             <p>Marketing expert - ReeDip</p>
         </section>
         <!-- SERVICES___________________________________________________________________________ -->
@@ -105,26 +105,26 @@
                 <!-- Left Blocks  -->
                 <div>
                     <section class="BCKwhite shadow">
-                        <header><h2>Corporate finance</h2></header>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed …</p>
+                        <header><h2 class="TXTmainDark fSize22 fBold fontSec">Corporate finance</h2></header>
+                        <p class="fSize18">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed …</p>
                         <p><a href="#">Read more</a></p>
                     </section>
                     <section class="BCKwhite shadow">
-                        <header><h2>Market analysis</h2></header>
-                        <p>Nibh vel velit auctor aliqunean sollicitudinlorem bibendum auci …</p>
+                        <header><h2 class="TXTmainDark fSize22 fBold fontSec">Market analysis</h2></header>
+                        <p class="fSize18">Nibh vel velit auctor aliqunean sollicitudinlorem bibendum auci …</p>
                         <p><a href="#">Read more</a></p>
                     </section>
                 </div>
                 <!-- Right Blocks -->
                 <div>
                     <section class="BCKwhite shadow">
-                        <header><h2>Audit & Evaluation</h2></header>
-                        <p>Cras risus arcu, sodales ac, ultrices ac, mollis quis, justo. Sed a libero. …</p>
+                        <header><h2 class="TXTmainDark fSize22 fBold fontSec">Audit & Evaluation</h2></header>
+                        <p class="fSize18">Cras risus arcu, sodales ac, ultrices ac, mollis quis, justo. Sed a libero. …</p>
                         <p><a href="#">Read more</a></p>
                     </section>
                     <section class="BCKwhite shadow">
-                        <header><h2>Sales & Trade</h2></header>
-                        <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi …</p>
+                        <header><h2 class="TXTmainDark fSize22 fBold fontSec">Sales & Trade</h2></header>
+                        <p class="fSize18">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi …</p>
                         <p><a href="#">Read more</a></p>
                     </section>
                 </div>
@@ -132,8 +132,8 @@
             <!-- Solution  -->
             <div id="serviceRight">
                 <section>
-                    <header><h2>Get a solutions to your businesses</h2></header>
-                    <p>Our consultants help address your most challenging issues by providing strategic, financial, operational, and IT services.</p>
+                    <header><h2 class="TXTmainDark fSize34 fBold fontSec">Get a solutions to your businesses</h2></header>
+                    <p class="fSize18">Our consultants help address your most challenging issues by providing strategic, financial, operational, and IT services.</p>
                     <div><a class="button" href="#">Order Service</a></div>
                 </section>
             </div>
@@ -141,33 +141,33 @@
         <!-- COMMUNITY___________________________________________________________________________ -->
         <section id="community" class="flexSideSide">
             <div id="grayblock"></div>
-            <header><h2>We serve fine services in creative community</h2></header>
-            <p>Commodo nulla facilisi nullam vehicula ipsum sociis. Faucibus scelerisque eleifend donec pretium necud vulputate sapien nec, elit eget gravida cum. </p>
+            <header><h2 class="TXTmainDark fSize34 fBold fontSec">We serve fine services in creative community</h2></header>
+            <p class="fSize18">Commodo nulla facilisi nullam vehicula ipsum sociis. Faucibus scelerisque eleifend donec pretium necud vulputate sapien nec, elit eget gravida cum. </p>
             <div class="flex">
                 <div><a class="button" href="#">Be One of Us</a></div>
-                <div><a href="#">Support projects</a></div>
+                <div><a class="TXTmainDark fSize15" href="#">Support projects</a></div>
             </div>
         </section>
     </main>
-        <!-- FOOTER _____________________________________________________________________________  -->
+    <!-- FOOTER _____________________________________________________________________________  -->
     <footer class="container">
         <!-- Subscribe  -->
         <div id="subscribe" class="flexSideSide BCKmain TXTwhite">
-            <p>Subscribe to our newsletters</p>
-            <div><a id="sendButton" href="#">Send</a></div>
+            <p class="fSize22">Subscribe to our newsletters</p>
+            <div><a id="sendButton" class="fontSec" href="#">Send</a></div>
         </div>
         <!-- Footbar  -->
         <div id="footbar" class="flexSideSide">
             <!-- Left  -->
             <div id="footleft">
                 <div class="logo"></div>
-                <p>The wise man therefore always holds in these on matters to this principle of selection he rejects the to secure other friend.</p>
+                <p class="fSize18">The wise man therefore always holds in these on matters to this principle of selection he rejects the to secure other friend.</p>
                 <hr>
             </div>
             <!-- Contact infos  -->
             <address id="footContact">
-                <p>Contact Info</p>
-                <ul>
+                <p class="TXTmainDark fSize20 fBold fontSec">Contact Info</p>
+                <ul class="fSize18">
                     <li>2 St Gabriel Walk London SE1 6FG, UK</li>
                     <li>+44 141 552 3000</li>
                     <li><a href="mailto:info@merkulov.design">info@merkulov.design</a></li>
@@ -175,23 +175,23 @@
             </address>
             <!-- Links  -->
             <div id="links">
-                <p>Links</p>
+                <p class="TXTmainDark fSize20 fBold fontSec">Links</p>
                 <div class="flex">
-                    <ul>
-                        <li><a href="#">About company</a></li>
-                        <li><a href="#">Our services</a></li>
-                        <li><a href="#">Portfolio</a></li>
+                    <ul class="fSize18">
+                        <li><a class="TXTmainDark" href="#">About company</a></li>
+                        <li><a class="TXTmainDark" href="#">Our services</a></li>
+                        <li><a class="TXTmainDark" href="#">Portfolio</a></li>
                     </ul>
-                    <ul>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Contact</a></li>
+                    <ul class="fSize18">
+                        <li><a class="TXTmainDark" href="#">Team</a></li>
+                        <li><a class="TXTmainDark" href="#">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <!-- Copyright  -->
         <div id="copyright">
-            <p>© 2019 <span>Elipso Sketch Template</span> by <a href="#">merkulove</a></p>
+            <p class="fontSec fSize14">© 2019 <span class="fBold">Elipso Sketch Template</span> by <a class="TXTmain" href="#">merkulove</a></p>
         </div>
     </footer>
 </body>
